# ScreenRecorder

./: .gitignore  CMakeLists.txt  README.md
include/: ScreenRecorder.h
src/: ScreenRecorder.cpp  main.cpp
